--- a/ureport/templates/ureport/partials/row.html
+++ b/ureport/templates/ureport/partials/row.html
@@ -17,10 +17,15 @@
     <td>{{ msg.text }}</td>
     <td>{{ msg.date|date:"m/d/Y H:i:s" }}</td>
     <td>{{ msg.connection.contact.name }}</td>
+    {%if perms.rapidsms.view_numbers %}
     <td><a href="/messagehistory/{{ msg.connection.pk }}/">{{ msg.connection.identity }}</a></td>
+    {%endif%}
     <td>{{ msg.connection.contact.reporting_location }}</td>
-    <td><a id="msg_rep_link" href="/sendmessage/?forward=true&msg={{msg.pk}}" class="btn msg_rep"
-           data-remote=true>Foward</a> <a style="margin-top:3px; "
+    <td>{%if perms.rapidsms.forward %}
+        <a id="msg_rep_link" href="/sendmessage/?forward=true&msg={{msg.pk}}" class="btn msg_rep"
+           data-remote=true>Foward</a>
+        {%endif%}
+        <a style="margin-top:3px; "
                                           href="/sendmessage/?reply=true&msg={{msg.pk}}"
                                           class="btn msg_send" id="msg_send_link" data-remote=true>Reply</a>
     </td>
