--- a/ureport/templates/ureport/partials/contacts/contacts_row.html
+++ b/ureport/templates/ureport/partials/contacts/contacts_row.html
@@ -1,22 +1,18 @@
 {% extends 'generic/partials/partial_row.html' %}
 {% block remaining_row_content %}
     <td>
-        {% if object.default_connection %}
-            <a href="{% url ureport.views.ureporter_profile object.default_connection.pk %}">
+        {% if object.mobile %}
+            <a href="{% url ureport.views.ureporter_profile object.connection_pk %}">
         {% endif %}
         {{ object.name }}
-        {% if object.default_connection %}
+        {% if object.mobile %}
             </a>
         {% endif %}
     </td>
     <td>
-        <ul>
-            {% for c in object.connection_set.all %}
-                <li>
-                    {{ c.identity }}
-                </li>
-            {% endfor %}
-        </ul>
+
+                    {{ object.mobile}}
+
     </td>
     <td>
     {{  object.age }}
@@ -33,25 +29,31 @@
         {{ object.language }}
     {% endif %}
     </td>
-    <td id="row_{{ object.pk }}">{{ object.reporting_location.name }}</td>
+    <td id="row_{{ object.pk }}">{{ object.district }}</td>
     <td>
-        {% if object.groups %}
-            <ul>
-                {% for group in object.groups.all %}
-                <li>{{ group.name }}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}
-    <td>{{ object.responses__count }}</td>
-    <td class="button_col">
-    <div class="buttons">
-            <a href="javascript:void(0)" onclick="deleteReporter(this, {{ object.pk }},'{{ object.name }}')">
-                <img src="{{ MEDIA_URL }}rapidsms/icons/silk/delete.png" />
-            </a>
 
-             <a href="javascript:void(0)" onclick="editReporter(this, {{ object.pk }})">
-                <img src="{{ MEDIA_URL }}poll/icons/silk/pencil.png" />
-            </a>
-        </div>
-    </td>
+             {{ object.group }}
+        </td>
+
+<td>{{ object.questions }}</td>
+<td>{{ object.responses }}</td>
+<td>{{ object.incoming }}</td>
+<td>
+    {% if object.is_caregiver %}
+    Yes
+    {%else%}
+    No
+    {%endif %}
+</td>
+<td>{{ object.autoreg_join_date }}</td>
+<td>
+    {% if object.quit_date %}
+    {{ object.quit_date }}
+    {%else%}
+    N/A
+    {%endif%}
+
+</td>
+
+
 {% endblock %}
