create or replace + dash

--- a/ureport/templates/ureport/aids_dashboard.html
+++ b/ureport/templates/ureport/aids_dashboard.html
@@ -279,7 +279,7 @@
 
     <div class="Module">
         <h2>
-            Messages
+            Aids Messages
         </h2>
         <a href="./?capture=toggle" onclick="c=$(this).attr('href')+'&time='+new Date().getTime();$(this).attr('href',c);" id="status" class="btn" data-remote=true>
     <span id="capty">
