--- a/ureport/templates/ureport/partials/viz/choropleth.html
+++ b/ureport/templates/ureport/partials/viz/choropleth.html
@@ -232,8 +232,8 @@
         init_chmap();
     });
     CATEGORY_COLORS =  {% autoescape off %}{{ colors }}{% endautoescape %};
-    CATEGORY_COLOR_LOOKUP['no'] = '#AA4643';
-    CATEGORY_COLOR_LOOKUP['yes'] = '#89A54E';
+    CATEGORY_COLOR_LOOKUP['yes'] = '#AA4643';
+    CATEGORY_COLOR_LOOKUP['no'] = '#89A54E';
     CATEGORY_COLOR_LOOKUP['unknown'] = '#80699B';
     CATEGORY_COLOR_LOOKUP['uncategorized'] = '#4572A7';
     CATEGORY_OFFSET = 4;
