add poll/usolicitized/and autoreg message views

--- a/ureport/templates/ureport/contact_message_base.html
+++ b/ureport/templates/ureport/contact_message_base.html
@@ -44,6 +44,10 @@
 
         {% endblock %}
 {% block content %}
-<a href="/massmessages/" style="font-size:12pt">Show Mass Messages &gt;&gt;</a>
+<a href="/massmessages/" style="font-size:12pt">Show Mass Messages |</a>
+<a href="/unsolicitized_messages/" style="font-size:12pt">Show Unsolicitized Messages |</a>
+<a href="/poll_messages/" style="font-size:12pt">Show Poll Messages |</a>
+<a href="/autoreg_messages/" style="font-size:12pt">Show Autoreg Messages |</a>
+<a href="/quitmessages/" style="font-size:12pt">Show Quit Messages |</a>
 {{ block.super }}
 {% endblock %}
