--- a/ureport/templates/ureport_layout.html
+++ b/ureport/templates/ureport_layout.html
@@ -6,7 +6,7 @@
     <title>Ureport - {% block page_title %}Voice Matters{% endblock %}</title>
 
     {% block stylesheets %}
-        <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}ureport/stylesheets/ureport_home.css">
+        <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}ureport/stylesheets/ureport_home.css?11">
     {% endblock %}
     <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/jquery.js"></script>
 <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/ureport.min.js?41"></script>
