add contact delete

--- a/ureport/templates/ureport/message_history_base.html
+++ b/ureport/templates/ureport/message_history_base.html
@@ -116,7 +116,10 @@
                 </td>
                 <td><a href="?download=True" class="btn">Download</a></td>
                 <td><a class="btn" href="/contact/{{ contact.pk }}/blacklist/" data-remote=true
-                       data-disable-with="blacklisting...">Blacklist</a></td></tr>
+                       data-disable-with="blacklisting...">Blacklist</a></td>
+                <td><a class="btn" href="/contact/{{ contact.pk }}/delete/" >Delete</a></td>
+
+            </tr>
         </table>
 
     </div>
