--- a/ureport/templates/ureport/partials/viz/choropleth.html
+++ b/ureport/templates/ureport/partials/viz/choropleth.html
@@ -159,7 +159,7 @@
             if (map.layers[1].params.FEATUREID) {
                 params.featureid = map.layers[1].params.FEATUREID;
             }
-            OpenLayers.Request.GET("{{ geoserver_url }}unicef/wms", params, this, create_popup, create_popup);
+            OpenLayers.loadURL("{{ geoserver_url }}unicef/wms", params, this, create_popup, create_popup);
             OpenLayers.Event.stop(e);
         });
 
