--- a/ureport/templates/ureport/home.html
+++ b/ureport/templates/ureport/home.html
@@ -2,7 +2,7 @@
 
 {% block javascripts %}
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-    <script src="/geoserver/openlayers/OpenLayers.js?112"></script>
+    <script src="http://openlayers.org/api/2.11-rc1/OpenLayers.js?1123"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}generic/javascripts/map.js"></script>
     {{ block.super }}
 {% endblock %}
