--- a/ureport/templates/ureport/polls/alerts.html
+++ b/ureport/templates/ureport/polls/alerts.html
@@ -132,6 +132,7 @@
 
 <script src="{{MEDIA_URL}}ureport/javascripts/mp_dashboard.js" type="text/javascript"></script>
 <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/jquery-ui.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/dropdown.js"></script>
         {%endblock%}
 
         {%block top_js%}
@@ -304,7 +305,7 @@
         {%if  perms.ureport.can_export %}
 
         <span><a class="btn" href="?download=true" >Download</a></span>
-
+<span> <a  onclick="$('#district_filter').toggle();" href="javascript:void(0);" >Filter Districts >>|</a></span>
 
         <span><a  onclick="$('#remove').toggle();" href="javascript:void(0);" >Remove Captured >></a>
         </span> {%endif%}
@@ -315,6 +316,15 @@
 <tr><td><input type="submit" value="remove from alerts" class="btn" ></td></tr>
 </table>
             </form>
+        </div>
+
+        <div id="district_filter" style="display:none;">
+           <form action="" method="POST" data-remote=true>
+               <table>
+            <tr><td>{{district_form.as_table}}</td> <td><input type="submit" name="Filter By District(s)" value="Filter By District(s)" data-disable-with="Filtering......"></td></tr>
+                </table>
+
+           </form>
         </div>
 
         <table class="zebra-striped bordered fc" width="100%">
@@ -379,7 +389,7 @@
 
                         {%if not alert%}
 
-                        <li><a href='./?rating=1&msg={{msg.pk}}' onclick="bind_ajax(this,'rate{{msg.pk}}');"
+                        <li><a href='./?rating=1&msg={{msg.pk}}'  onclick="bind_ajax(this,'rate{{msg.pk}}');"
                                data-remote=true title='Requires Attention' class='one-star star'>1</a></li>
                         <li><a href='./?rating=2&msg={{msg.pk}}' onclick="bind_ajax(this,'rate{{msg.pk}}');"
                                data-remote=true title='Moderate' class='two-stars star'>2</a></li>
@@ -388,9 +398,27 @@
                         <li><a href='./?rating=4&msg={{msg.pk}}' onclick="bind_ajax(this,'rate{{msg.pk}}');"
                                data-remote=true title='Urgent' class='four-stars star star'>4</a></li>
                         <li><a href='./?rating=5&msg={{msg.pk}}' onclick="bind_ajax(this,'rate{{msg.pk}}');"
-                               data-remote=true title='Very Urgent' class='five-stars star'>5</a></li>
+                               data-remote=true title='Very Urgent' class='five-stars star '>5</a></li>
                         {%endif%}
 
+                    </ul>
+<a href="/uncapture/{{msg.pk}}/" data-remote=True class="btn">Delete</a>
+
+
+                    <ul style="list-style: none;">
+
+                        <li class="dropdown" id="menu2">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0)">
+                                <span >Assign</span>
+                                <b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu">
+                                {% for poll in assign_polls %}
+                                <li><a href="/assign/{{msg.pk}}/{{poll.pk}}/" data-remote=True >{{ poll.name }}</a>
+                                </li>
+                                {% endfor %}
+                            </ul>
+                        </li>
                     </ul>
 
 
