--- a/ureport/templates/ureport/partials/viz/choropleth.html
+++ b/ureport/templates/ureport/partials/viz/choropleth.html
@@ -2,52 +2,72 @@
 </div>
 <div id="map_layers">
     <ul class="key">
-        <li>Yes (50-60%)
+        <li>No (50-60%)
             <span style="width: 15px; height: 15px; background-color: #f5cbae; position: absolute; right: 0px;"
                   class="category"></span>
         </li>
 
-        <li>Yes (60-70%)
+        <li>No (60-70%)
             <span style="width: 15px; height: 15px; background-color: #eba988; position: absolute; right: 0px;"
                   class="category"></span>
         </li>
 
-        <li>Yes (70-80%)
+        <li>No (70-80%)
             <span style="width: 15px; height: 15px; background-color: #e08465; position: absolute; right: 0px;"
                   class="category"></span>
         </li>
 
-        <li>Yes (80-90%)
+        <li>No (80-90%)
             <span style="width: 15px; height: 15px; background-color: #d65d45; position: absolute; right: 0px;"
                   class="category"></span>
         </li>
 
-        <li>Yes (90-100%)
+        <li>No (90-100%)
             <span style="width: 15px; height: 15px; background-color: #c40a0a; position: absolute; right: 0px;"
                   class="category"></span>
         </li>
 
-        <li>No (50-60%)
+        <li>Yes (0-10%)
+            <span style="width: 15px; height: 15px; background-color: #ffffcc; position: absolute; right: 0px;"
+                  class="category"></span>
+        </li>
+        <li>Yes (10-20%)
+            <span style="width: 15px; height: 15px; background-color: #f2fa58; position: absolute; right: 0px;"
+                  class="category"></span>
+        </li>
+        <li>Yes (20-30%)
+            <span style="width: 15px; height: 15px; background-color:#ccff29; position: absolute; right: 0px;"
+                  class="category"></span>
+        </li>
+        <li>Yes (30-40%)
+            <span style="width: 15px; height: 15px; background-color: #caea5d; position: absolute; right: 0px;"
+                  class="category"></span>
+        </li>
+        <li>Yes (40-50%)
+            <span style="width: 15px; height: 15px; background-color: #99cc00; position: absolute; right: 0px;"
+                  class="category"></span>
+        </li>
+        <li>Yes (50-60%)
             <span style="width: 15px; height: 15px; background-color: #aef5cb; position: absolute; right: 0px;"
                   class="category"></span>
         </li>
 
-        <li>No (60-70%)
+        <li>Yes (60-70%)
             <span style="width: 15px; height: 15px; background-color: #88eba9; position: absolute; right: 0px;"
                   class="category"></span>
         </li>
 
-        <li>No (70-80%)
+        <li>Yes (70-80%)
             <span style="width: 15px; height: 15px; background-color: #65e084; position: absolute; right: 0px;"
                   class="category"></span>
         </li>
 
-        <li>No (80-90%)
+        <li>Yes (80-90%)
             <span style="width: 15px; height: 15px; background-color: #45d65d; position: absolute; right: 0px;"
                   class="category"></span>
         </li>
 
-        <li>No (90-100%)
+        <li>Yes (90-100%)
             <span style="width: 15px; height: 15px; background-color: #0ac40a; position: absolute; right: 0px;"
                   class="category"></span>
         </li>
