cleaup alerts view

--- a/ureport/templates/ureport/polls/alerts.html
+++ b/ureport/templates/ureport/polls/alerts.html
@@ -509,7 +509,7 @@
             {% else %}
             <span {% if num == messages.number%}class="current"{%endif%}>
 
-            <a href=" {% add_get_parameter page=num %} " >{{num}}</a>{{num}}</a></span>
+            <a href=" {% add_get_parameter page=num %} " ></a>{{num}}</a></span>
 
             {% endif %}
             {% endfor %}
