--- a/ureport/templates/ureport/polls/alerts.html
+++ b/ureport/templates/ureport/polls/alerts.html
@@ -3,7 +3,7 @@
 <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}ureport/stylesheets/ureport_extras.css"/>
 <link type="text/css" rel="stylesheet" href="{{ MEDIA_URL }}ureport/stylesheets/ureport.min.css"/>
 <link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}ureport/stylesheets/modal.css"/>
-<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}generic/stylesheets/jquery-ui-1.7.3.custom.css"/>
+<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}ureport/stylesheets/js_ui/jquery-ui.css"/>
 
 <style>
     .star-rating {
@@ -131,8 +131,8 @@
 
 
 <script src="{{MEDIA_URL}}ureport/javascripts/mp_dashboard.js" type="text/javascript"></script>
-<script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/jquery-ui.js"></script>
 <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/dropdown.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/jquery-ui.js"></script>
         {%endblock%}
 
         {%block top_js%}
@@ -509,7 +509,7 @@
             {% else %}
             <span {% if num == messages.number%}class="current"{%endif%}>
 
-            <a href=" {% add_get_parameter page=num %} " ></a>{{num}}</a></span>
+            <a href=" {% add_get_parameter page=num %} " >{{num}}</a></span>
 
             {% endif %}
             {% endfor %}
