--- a/ureport/templates/ureport/polls/alerts.html
+++ b/ureport/templates/ureport/polls/alerts.html
@@ -306,21 +306,23 @@
         </a>
         {%if  perms.ureport.can_export %}
 
-        <span><a class="btn" href="?download=true" >Download</a></span>
+
+
+
 <span> <a  onclick="$('#district_filter').toggle();" href="javascript:void(0);" >Filter Districts >>|</a></span>
 
-        <span><a  onclick="$('#remove').toggle();" href="javascript:void(0);" >Remove Captured >></a>
+        <span><a  onclick="$('#download').toggle();" href="javascript:void(0);" >Download >></a>
         </span>
 
 
         {%endif%}
 
-        <div id="remove" style="display:none;">
-            <form data-remote=true method="post" id="remove_form" action="/remove_captured/">
-<table>
-        {{range_form.as_table}}
-<tr><td><input type="submit" value="remove from alerts" class="btn" ></td></tr>
-</table>
+        <div id="download" style="display:none;">
+            <form  method="POST"  action="?download=true">
+                <table>
+                    {{range_form.as_table}}
+                    <tr><td><input type="submit" value="Download" class="btn" ></td></tr>
+                </table>
             </form>
         </div>
 
