add accupation to contact

--- a/ureport/templates/ureport/message_history_base.html
+++ b/ureport/templates/ureport/message_history_base.html
@@ -57,6 +57,16 @@
                     <td>No</td>
                 </tr>
             {% endif %}
+            {% if contact.occupation %}
+            <tr>
+                <td>Occupation:</td>
+                <td>{{contact.occupation}}</td>
+            </tr>
+
+            {% endif %}
+
+
+
 
 
             <tr>
