fix remote submit

--- a/ureport/templates/ureport/partials/reply.html
+++ b/ureport/templates/ureport/partials/reply.html
@@ -1,6 +1,29 @@
 <form method="post" id="message_reply" action="/sendmessage/?reply=true" data-remote=true>
     <div class="modal-header">
         <a class="close" data-dismiss="modal" onclick='$(".modal").hide()'>×</a>
+        <script type="text/javascript">
+
+            function bind_sform(){
+
+                form=$("#message_reply");
+                $.ureport.handleRemote( $("#message_reply") );
+
+                form.bind('ajax:before',function (exhr, status, error) {
+                    ajax_loading('#cat_tb');
+
+                })
+                        .bind('ajax:success', function(evt, data, status, xhr) {
+                            $('#mesg_title').html("info");
+                            $('#mesg_body').html("Message Successfully sent");
+                            $('#mesg_st').show();
+                            $('#mesg_st').effect("highlight", {}, 3000);
+
+                        })
+                        .bind('ajax:failure', function(evt, data, status, xhr) {
+                            alert("something went wrong!");
+                        });
+            }
+        </script>
 
 
         <h3>Reply Message</h3>
@@ -17,6 +40,9 @@
     </div>
     <div class="modal-footer">
         <a href="javascript:void(0)" data-dismiss="modal" class="btn" onclick='$(".modal").hide()'>Close</a>
-        <input type="submit"   onclick='$(".modal").hide();message_info();' class="btn btn-primary" value="Send Message">
+        <a href="javascript:void(0);"    onclick='$(".modal").hide();bind_sform();' class="btn btn-primary" >
+
+            Send Message
+            </a>
     </div>
 </form>
