add subcounty to exports

--- a/ureport/templates/ureport/message_history_base.html
+++ b/ureport/templates/ureport/message_history_base.html
@@ -76,6 +76,13 @@
 
 
             <tr>
+                <td>SubCounty:</td>
+                
+                <td>{{ contact.subcounty }}</td>
+            </tr>
+
+
+            <tr>
                 <td>Village:</td>
                 <td>{{ contact.village }}</td>
             </tr>
