--- a/ureport/templates/ureport/polls/alerts.html
+++ b/ureport/templates/ureport/polls/alerts.html
@@ -130,12 +130,13 @@
 {% block extra_js %}
 
 
-<script src="{{MEDIA_URL}}ureport/javascripts/mp_dashboard.js" type="text/javascript"></script>
-<script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/dropdown.js"></script>
-<script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/jquery-ui.js"></script>
+
         {%endblock%}
 
         {%block top_js%}
+        <script src="{{MEDIA_URL}}ureport/javascripts/mp_dashboard.js" type="text/javascript"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/dropdown.js"></script>
+<script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/jquery-ui.js"></script>
 <script type="text/javascript">
 
 
@@ -251,6 +252,7 @@
 
     });
 
+
     function bind_ajax(elem, cont) {
         $(elem).bind('ajax:before',function (exhr, status, error) {
             ajax_loading(elem);
@@ -300,10 +302,7 @@
                 });
     }
 
-    $(function() {
-
-        bind_form();
-    });
+    
 
 
 
@@ -450,19 +449,19 @@
                         {%endif%}
 
                     </ul>
-<a href="/uncapture/{{msg.pk}}/" data-remote=True class="btn">Delete</a>
+<a href="/uncapture/{{msg.pk}}/" onclick="$('#uncapt').remove();" id="uncapt"data-remote=True class="btn">Delete</a>
 
 
                     <ul style="list-style: none;">
 
                         <li class="dropdown" id="menu2">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="javascript:void(0)">
-                                <span >Assign</span>
+                                <span id='asspan{{msg.pk}}'>Assign</span>
                                 <b class="caret"></b>
                             </a>
                             <ul class="dropdown-menu">
                                 {% for poll in assign_polls %}
-                                <li><a href="/assign/{{msg.pk}}/{{poll.pk}}/" data-remote=True >{{ poll.name }}</a>
+                                <li><a onclick="$('#asspan{{msg.pk}}').text('Assined to {{poll.name}}');" href="/assign/{{msg.pk}}/{{poll.pk}}/" data-remote=True >{{ poll.name }}</a>
                                 </li>
                                 {% endfor %}
                             </ul>
