form field rename

--- a/ureport/templates/ureport/mp_dashboard.html
+++ b/ureport/templates/ureport/mp_dashboard.html
@@ -101,9 +101,9 @@
 
                 <tr><td>{{ poll_form.errors }}</td></tr>
 
-                <tr><td>Name:</td><td>{{ poll_form.name}}</td><td>Question:</td><td>{{ poll_form.question}}</td> <td><input type="submit" class="btn-primary btn btn-large" value="Send Poll"></td></tr>
+                <tr><td>Name:</td><td>{{ poll_form.name}}</td><td>Question:</td><td>{{ poll_form.question_en}}</td> <td><input type="submit" class="btn-primary btn btn-large" value="Send Poll"></td></tr>
                 <tr><td>Type:</td><td>{{ poll_form.type}}</td><td>Luo Question:</td><td>{{ poll_form.question_luo}}</td><td></td></tr>
-                <tr><td>Response Type:</td><td>{{ poll_form.response_type}}</td><td>Auto Response:</td><td>{{ poll_form.default_response}}</td><td></td></tr>
+                <tr><td>Response Type:</td><td>{{ poll_form.response_type}}</td><td>Auto Response:</td><td>{{ poll_form.default_response_en}}</td><td></td></tr>
                 <tr><td></td><td></td><td>Auto Response Luo:</td><td>{{ poll_form.default_response_luo}}</td><td></td></tr>
 
 
