--- a/ureport/templates/ureport/partials/messages/flagged_message_row.html
+++ b/ureport/templates/ureport/partials/messages/flagged_message_row.html
@@ -2,7 +2,7 @@
 {% block remaining_row_content %}
 {% load extra_tags %}
 <td>
-    <span class="textmessage">
+    <span >
     {{ object.message.text }}
     </span>
 </td>
