--- a/ureport/templates/ureport/partials/viz/piechart.html
+++ b/ureport/templates/ureport/partials/viz/piechart.html
@@ -1,9 +1,76 @@
 <div style="width:100%;height:300px;" id="pie_{{ poll.pk }}">
 </div>
+
+<div id="filter_by_gender">
+    <input type="radio" name="gender_button" value="m" onclick="get_gender_stats();"/> Male <br>
+    <input type="radio" name="gender_button" value="f" onclick="get_gender_stats();"/> Female <br>
+</div>
+<div style="min-width: 200px; height: 400px; margin: 0 auto" id="genderstats_{{ poll.pk }}">
+</div>
+
+<div style="padding-top: 10px;" id="filter_by_age">
+    <label for="lower">Start Age</label>
+    <input type="text" id="lower"/>
+    <br>
+    <label for="upper">End Age</label>
+    <input type="text" id="upper"/>
+    <br>
+    <input type="button" value="Filter By Age" onclick="get_age_stats();"/>
+
+</div>
+<div style="min-width: 200px; height: 400px; margin: 0 auto" id="agestats_{{ poll.pk }}">
+</div>
+
+
 <script src="{{MEDIA_URL}}ureport/javascripts/highcharts.js" type="text/javascript"></script>
+<script src="{{MEDIA_URL}}ureport/javascripts/jqBarGraph.1.1.min.js" type="text/javascript"></script>
+
 <script language="javascript">
-  $(document).ready(function() {
-    load_piechart('{{ poll.pk }}', 'pie_{{ poll.pk }}', '{% url poll.views.stats poll.pk %}');
-  });
+    $(document).ready(function () {
+        var age_id = "#agestats_{{ poll.pk }}";
+        var gender_id = "#genderstats_{{ poll.pk }}";
+        $(age_id).hide();
+        $(gender_id).hide();
+        load_piechart('{{ poll.pk }}', 'pie_{{ poll.pk }}', '{% url poll.views.stats poll.pk %}');
+        get_gender_stats = function () {
+            $(gender_id).html("");
+            $(gender_id).show();
+
+            var gender = $('input[name=gender_button]:checked')[0].value;
+            var url = '{% url poll.views.gender_stats poll.pk %}' + '?gender=' + gender;
+            $.ajax({
+                type:"GET",
+                url:url,
+                dataType:"json",
+                success:function (data) {
+                    for (i = 0; i < data.length; i++) {
+                        data[i][2] = get_color(data[i][1]);
+                    }
+                    $(gender_id).jqBarGraph({ data: data, barSpace : 20, width: 300 });
+                }
+            });
+        };
+
+        get_age_stats = function () {
+            $(age_id).html("");
+            $(age_id).show();
+            var lower = $('#lower').val();
+            var upper = $('#upper').val();
+            var url = '{% url poll.views.age_stats poll.pk %}' + '?lower=' + lower + "&upper=" + upper;
+            $.ajax({
+                type:"GET",
+                url:url,
+                dataType:"json",
+                success:function (data) {
+                    for (i = 0; i < data.length; i++) {
+                        data[i][2] = get_color(data[i][1]);
+                    }
+                    $(age_id).jqBarGraph({ data: data, barSpace : 20, width: 300 });
+                }
+            });
+
+        };
+
+    });
 
 </script>
