--- a/ureport/templates/ureport/new_poll.html
+++ b/ureport/templates/ureport/new_poll.html
@@ -8,6 +8,10 @@
 <form action="{% url ureport.views.new_poll %}" method="post" class="uniForm" id="newForm">
 <fieldset>
 {{ form|as_uni_form }}
+
+  <div class="ctrlHolder">Excluded Groups: </div>
+    <div class="ctrlHolder">
+    {{ groups_form.groups }}</div>
 <div class="buttons" style="float:left;margin-bottom:10px;margin-top:10px">
   <a href="{% url polls %}">
     <img src="{{ MEDIA_URL }}rapidsms/icons/silk/decline.png" alt=""/>
