--- a/ureport/templates/ureport/new_poll.html
+++ b/ureport/templates/ureport/new_poll.html
@@ -11,7 +11,7 @@
 
   <div class="ctrlHolder">Excluded Groups: </div>
     <div class="ctrlHolder">
-    {{ groups_form.groups }}</div>
+    {{ groups_form.group_list }}</div>
 <div class="buttons" style="float:left;margin-bottom:10px;margin-top:10px">
   <a href="{% url polls %}">
     <img src="{{ MEDIA_URL }}rapidsms/icons/silk/decline.png" alt=""/>
