switch to xlsx from xls for exports

--- a/ureport/templates/ureport/partials/polls/poll_partial_base.html
+++ b/ureport/templates/ureport/partials/polls/poll_partial_base.html
@@ -56,7 +56,7 @@
     </div>
     {% block export %}
     <div class="buttons">
-            <a href="{{ MEDIA_URL }}ureport/spreadsheets/poll_{{object_list.0.poll.pk }}.xls">
+            <a href="{{ MEDIA_URL }}ureport/spreadsheets/poll_{{object_list.0.poll.pk }}.xlsx">
             <img src="{{ MEDIA_URL }}poll/icons/silk/table_save.png" alt=""/> Export
         </a>
     </div>
