--- a/ureport/templates/ureport/ureporters_base.html
+++ b/ureport/templates/ureport/ureporters_base.html
@@ -1,4 +1,4 @@
-{% extends "generic/base.html" %}
+{% extends "ureport/base.html" %}
 {% block title %}
     uReporters - {{ block.super }}
 {% endblock %}
@@ -108,13 +108,16 @@ $("#id_enddate").datepicker({ dateFormat: 'dd/mm/yy' ,changeYear: true ,changeMo
     </div>
     <div class="tab-pane " id="exports">
         <table>
+
             {{export_form.as_table}}
             <tr><td colspan="2">Select Join Date range and download</td></tr>
 
             </tr>
+
             {{download_form.as_table}}
-            <tr><td><input type="submit" value="Download"></td></tr>
-            <tr><td>  <tr><td><a class="export_link" href="{{ MEDIA_URL }}ureport/spreadsheets/ureporters.zip">Export All To Excel</a></td></td></tr>
+            <tr><td><input  type="submit" value="Download"></td></tr>
+
+            <tr><td>  <tr><td><a class="export_link" href="{{ MEDIA_URL }}ureport/spreadsheets/ureporters.xlsx">Export All To Excel</a></td></td></tr>
         </table>
     </div>
     <div class="tab-pane " id="send_custom">
