--- a/ureport/templates/ureport/partials/groups_form.html
+++ b/ureport/templates/ureport/partials/groups_form.html
@@ -1,4 +1,4 @@
-<form method="post" id="message_reply" action="/group_rules/" data-remote=true>
+<form method="post" id="message_reply" action="/set_group_rules/" data-remote=true>
     <div class="modal-header">
         <a class="close" data-dismiss="modal" onclick='$(".modal").hide()'>×</a>
 
