--- a/ureport/templates/ureport/partials/contacts/contact_row2.html
+++ b/ureport/templates/ureport/partials/contacts/contact_row2.html
@@ -1,6 +1,9 @@
 {% extends 'generic/partials/partial_row.html' %}
 {% block remaining_row_content %}
 <td>
+    {{ object.connection_pk }}
+</td>
+<td>
     {{  object.age }}
 </td>
 <td>
