--- a/ureport/templates/ureport/partials/messages/message_row.html
+++ b/ureport/templates/ureport/partials/messages/message_row.html
@@ -12,6 +12,9 @@
     </span>
 </td>
 <td>
+    {{ object.connection_id }}
+</td>
+<td>
     <span class="small">
         {{ object.date|date:"m/d/Y H:i:s" }}
     </span>
