--- a/ureport/templates/ureport/mp_dashboard.html
+++ b/ureport/templates/ureport/mp_dashboard.html
@@ -40,14 +40,6 @@
 {% endblock %}
 
 {% block content %}
-    <div>
-    <form action="" method="post" data-remote=true>
-        Filter Group
-        {{ groupform.groups }}
-
-        <input type="submit" value="filter group" data-disable-with="Filtering......" >
-    </form>
-    </div>
     <div class="module">
         <h2>Filter Poll Contacts</h2>
         
@@ -122,6 +114,7 @@
         <table class="zebra-striped bordered fc" width="100%" id="mps">
             <thead>
             <tr>
+                <th>Identifier</th>
                 <th>Text</th>
                 <th>Date</th>
                 <th>District</th>
@@ -131,6 +124,7 @@
             <tbody id="mp_bd">
             {% for msg in messages.object_list %}
                 <tr>
+                    <td>{{ msg.connection_id }}</td>
                     <td>{{ msg.text }}</td>
                     <td>{{ msg.date|date:"m/d/Y H:i:s" }}</td>
                     <td>{{ msg.connection.contact.reporting_location }}</td>
